# MovieRentalsGUI

./: AbstractRepository.h  CMakeLists.txt  Exceptions.cpp  Exceptions.h  GUI.cpp  GUI.h  JustListGUI.cpp  JustListGUI.h  Movie.cpp  Movie.h  MovieRepository.cpp  MovieRepository.h  MovieRepositoryFile.cpp  MovieRepositoryFile.h  Observer.h  README.md  Service.cpp  Service.h  TableModel.cpp  TableModel.h  Tests.cpp  Tests.h  Undo.cpp  Undo.h  Validator.cpp  Validator.h  WatchListReadOnlyGUI.cpp  WatchListReadOnlyGUI.h  WatchlistCRUDGUI.cpp  WatchlistCRUDGUI.h  WatchlistGUI.cpp  WatchlistGUI.h  main.cpp
IORepoTests/: testWatchlist
Persistence/: movies.csv
